Changelog
=========

2.0 - unreleased
----------------

* Declare test dependencies in an extra.
  [hannosch]

* Specify package dependencies.
  [hannosch]

* Handle the case where the handles for a given domain are empty but a
  request for them is made anyway. This fixes
  http://dev.plone.org/plone/ticket/9178
  [jvloothuis]

1.2 - August 19, 2008
---------------------

* Fixed bug where you could not log in via OpenID, immediately log out,
  and then immediately log in again.
  [davisagli]

* Upgraded to python-openid>=2.2.1 to fix handling of OpenID providers
  that use identifier recycling.  (c.f.
  http://developer.yahoo.com/openid/faq.html)  This closes
  http://dev.plone.org/plone/ticket/8051.
  [davisagli]

* Use the OpenID "claimed identifier" so that the proper identity URL is
  displayed when using delegation.
  [davisagli]

1.1 - April 21, 2008
--------------------

* Writing test and fixes for bug #7176 whereby a traceback
  was produced when an empty string identity was placed in the openid
  login form.
  [andrewb]

* Do not enable OpenID support if python has no SSL support.
  [wichert]


1.0.1 - November 9, 2007
------------------------

* Also accept https URLs as valid identifiers. This fixes
  http://dev.plone.org/plone/ticket/7298
  [wichert]


1.0 - August 15, 2007
---------------------

* First stable release
  [wichert]
