@@ -8,7 +8,6 @@ setup(name='plone.openid',
       long_description=open("README.txt").read() + \
                        open("docs/HISTORY.txt").read(),
       classifiers=[
-        "Framework :: Plone",
         "Framework :: Zope2",
         "License :: OSI Approved :: GNU General Public License (GPL)",
         "Programming Language :: Python",
@@ -23,12 +22,6 @@ setup(name='plone.openid',
       namespace_packages=['plone'],
       include_package_data=True,
       zip_safe=False,
-      extras_require=dict(
-        test=[
-            'zope.testing',
-            'Products.PloneTestCase',
-        ]
-      ),
       install_requires=[
         'setuptools',
         'python-openid >=2.2.1,<2.3dev',
